--- a/flashcards/templates/flashcards/pdf_progress.html
+++ b/flashcards/templates/flashcards/pdf_progress.html
@@ -210,7 +210,7 @@
                         <i class="fas fa-project-diagram fa-3x text-info mb-3"></i>
                         <h6>Explore Knowledge Graph</h6>
                         <p>See how your focus blocks connect to each other</p>
-                        <a href="{% url 'flashcards:new_format_knowledge_graph' %}" class="btn btn-info">
+                        <a href="{% url 'flashcards:knowledge_graph' %}" class="btn btn-info">
                             <i class="fas fa-sitemap me-2"></i>View Graph
                         </a>
                     </div>
