--- a/flashcards/templates/flashcards/study_schedule.html
+++ b/flashcards/templates/flashcards/study_schedule.html
@@ -200,7 +200,7 @@
                 </div>
                 <div class="card-body">
                     <div class="d-flex flex-wrap gap-2">
-                        <a href="{% url 'flashcards:new_format_knowledge_graph' %}" class="btn btn-outline-primary">
+                        <a href="{% url 'flashcards:knowledge_graph' %}" class="btn btn-outline-primary">
                             <i class="fas fa-project-diagram me-2"></i>View Knowledge Graph
                         </a>
                         <a href="{% url 'flashcards:all_focus_blocks' %}" class="btn btn-outline-secondary">
