--- a/flashcards/templates/flashcards/base.html
+++ b/flashcards/templates/flashcards/base.html
@@ -117,6 +117,12 @@
                             <i class="fas fa-target me-1"></i>Focus Blocks
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'offline_study' %}active{% endif %}" 
+                           href="{% url 'flashcards:offline_study' %}">
+                            <i class="fas fa-download me-1"></i>Offline Study
+                        </a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'flashcards:new_format_knowledge_graph' %}">
